--- a/twentythirteen-www-tg/languages/en_US.po
+++ b/twentythirteen-www-tg/languages/en_US.po
@@ -9,7 +9,17 @@ msgstr ""
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../footer.php:32
+# ------------------------------------------------------------------------------
+# Front-page
+# front-page.php
+
+msgid "References little phrase"
+msgstr "They trust us and we are very proud of it, thanks"
+
+# ------------------------------------------------------------------------------
+# Footer
+# footer.php
+
 msgid "Sign up"
 msgstr "Sign up"
 
