Front page: strings added in i18n

--- a/twentythirteen-www-tg/languages/fr_FR.po
+++ b/twentythirteen-www-tg/languages/fr_FR.po
@@ -13,18 +13,101 @@ msgstr ""
 # Front-page
 # front-page.php
 
-msgid "References little phrase"
+msgid "Everest Simply Title"
+msgstr "L'accessibilité, simplement"
+
+msgid "Everest Simply Little Phrase"
+msgstr "La voie la plus rapide pour optimiser votre accessibilité."
+
+msgid "Everest Fast Title"
+msgstr "Accélérez vos tests d’accessibilité. Vraiment."
+
+msgid "Everest Fast Little Phrase"
+msgstr "Tanaguru automatise 167 tests d'accessibilité (<abbr title='Référentiel Général d'Accessibilité des Administrations'>RGAA</abbr>, AccessiWeb, <span lang='en'><abbr title='Web Content Accessibility Guidelines'>WCAG</abbr></span>).<br /> L'évaluation d'une page, d'un site entier ou d'une application web est fiable, intuitive et elle-même accessible."
+
+msgid "Button Test Tanaguru"
+msgstr "Tester Tanaguru"
+
+msgid "Technology Title"
+msgstr "Plusieurs types d’analyses, tous les usages"
+
+msgid "Techno1 Title"
+msgstr "Gabarit &amp; page web"
+
+msgid "Techno2 Title"
+msgstr "Site entier"
+
+msgid "Techno3 Title"
+msgstr "Scénario"
+
+msgid "Techno1 Feature"
+msgstr "Les gabarits en cours de création peuvent être audités avant même leur mise en production.<br />Les pages web sont évaluées instantanément."
+
+msgid "Techno2 Feature"
+msgstr "Grâce à son <span lang='en'>crawler</span>, Tanaguru parcours la totalité du site. Portail institutionnel, blog ou site vitrine, mesurez l'accessibilité de 10000 pages en un clic !"
+
+msgid "Techno3 Feature"
+msgstr "Validez les applications Javascript, les intranets ou le parcours d'achat d'un site e-commerce. L'audit scénario permet même de contrôler plusieurs états d'une même page."
+
+msgid "Why Title"
+msgstr "Pourquoi Tanaguru ?"
+
+msgid "Why1 Title"
+msgstr "Fiable"
+
+msgid "Why2 Title"
+msgstr "Automatisé"
+
+msgid "Why3 Title"
+msgstr "Facile"
+
+msgid "Why1 Description"
+msgstr "Les résultats de Tanaguru sont fiables. En cas de doute, il vous informe au lieu de donner un résultat faux. Tanaguru vous fourni tous les éléments nécessaires à votre prise de décision."
+
+msgid "Why2 Description"
+msgstr "Vous en avez marre de compter les <code>alt</code> à la main ? Nous aussi ! Repousser les limites de l'automatisation est notre motivation. Offrir des gains de productivité fait partie du code (génétique) de Tanaguru."
+
+msgid "Why3 Description"
+msgstr "Les normes d'accessibilité peuvent être complexes. Tanaguru apporte les marche-pieds pour bien initier sa mise en conformité."
+
+msgid "Steps Title"
+msgstr "Simple, rapide, adapté"
+
+msgid "Steps Little Phrase"
+msgstr "Avec Tanaguru, 4 étapes suffisent pour tester un site entier, de manière personnalisable, fiable et agréable."
+
+msgid "Step1 Description"
+msgstr "Lancez un audit en le parametrant suivant vos besoins"
+
+msgid "Step2 Description"
+msgstr "Définissez vos priorités grâce à la synthèse globale."
+
+msgid "Step3 Description"
+msgstr "A vous de jouer! Utilisez les résultats détaillés."
+
+msgid "Step4 Description"
+msgstr "Suivez l’évolution de l’accessibilité de votre site."
+
+msgid "References Little Phrase"
 msgstr "Ils nous font confiance et nous en sommes très fiers, merci"
 
+msgid "Evaluate your accessibility !"
+msgstr "Evaluer votre accessibilité !"
+
 # ------------------------------------------------------------------------------
-# Footer
-# footer.php
+# Header
+# header.php
 
 msgid "Sign up"
 msgstr "S'inscrire"
 
 msgid "Sign in"
 msgstr "Se connecter"
+
+# ------------------------------------------------------------------------------
+# Footer
+# footer.php
+
 
 msgid "And also"
 msgstr "Et aussi"
@@ -149,5 +232,3 @@ msgstr "Aide et Accessibilité"
 msgid "Accessibility link"
 msgstr "Link_to_Accessibility_page"
 
-msgid "Evaluate your accessibility !"
-msgstr "Tester votre accessibilité !"
