Content: link to sign-in & contact page

--- a/twentythirteen-www-tg/languages/en_US.po
+++ b/twentythirteen-www-tg/languages/en_US.po
@@ -127,9 +127,6 @@ msgstr "Sign in"
 msgid "And also"
 msgstr "And also"
 
-msgid "Select your language"
-msgstr "Select your language"
-
 msgid "Technology link title"
 msgstr "Tanaguru's Technologies"
 
@@ -150,6 +147,9 @@ msgstr "Offer"
 
 msgid "Offer link"
 msgstr "Link_to_Offer_Page"
+
+msgid "Contact link"
+msgstr "http://www.tanaguru.com/en/contact-3/"
 
 msgid "KBAccess link title"
 msgstr "KBAccess - collaborative set of good and bad examples of web accessibility"
