--- a/twentythirteen-www-tg/languages/en_US.po
+++ b/twentythirteen-www-tg/languages/en_US.po
@@ -227,7 +227,7 @@ msgid "Ohloh link"
 msgstr "https://www.ohloh.net/p/Tanaguru"
 
 msgid "Tanaguru free software by Open-S"
-msgstr "Tanaguru, free software edited by <a href=\"http://www.Open-S.com/\">Open-S</a>"
+msgstr "Tanaguru, free software edited by <a href=\"http://www.oceaneconsulting.com/\">Oceane Consulting</a>"
 
 msgid "Legal text link"
 msgstr "Legal"
