Site - footer : add link "Offers" and remove "Oh" link

--- a/twentythirteen-www-tg/languages/en_US.po
+++ b/twentythirteen-www-tg/languages/en_US.po
@@ -143,7 +143,10 @@ msgid "Tour link"
 msgstr "Link_to_Tour_Page"
 
 msgid "Offer link text"
-msgstr "Offer"
+msgstr "Offers"
+
+msgid "Offer link url"
+msgstr "http://www.tanaguru.com/en/accessibility-automation-offers/"
 
 msgid "Offer link"
 msgstr "Link_to_Offer_Page"
