--- a/twentythirteen-www-tg/languages/fr_FR.po
+++ b/twentythirteen-www-tg/languages/fr_FR.po
@@ -147,6 +147,9 @@ msgstr "Link_to_Tour_Page"
 msgid "Offer link text"
 msgstr "Offres"
 
+msgid "Offer link url"
+msgstr "http://www.tanaguru.com/fr/offres-accessibilite-web-automatisation-formation-saas/"
+
 msgid "Offer link"
 msgstr "Link_to_Offer_Page"
 
