--- a/twentythirteen-www-tg/languages/en_US.po
+++ b/twentythirteen-www-tg/languages/en_US.po
@@ -112,6 +112,12 @@ msgstr "They trust us and we are very proud of it, thank you."
 msgid "Evaluate your accessibility !"
 msgstr "Evaluate your accessibility !"
 
+msgid "References Big Phrase"
+msgstr "Tanaguru is designed for all companies, from individual consultants to the large group."
+
+msgid "Button Reference Tanaguru"
+msgstr "Try Tanaguru"
+
 # ==============================================================================
 # Header
 # header.php
